libs/slim/test/typecheck/fail/undeclared_symbol.shader
shader vertex {
    int foo = bar;
    return vec4(0.0, 0.0, 0.0, 1.0);
}
